[package]
name = "micro-lane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.53", features = ["derive", "default"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["rt"] }
tokio-utils = "0.1.2"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
